--- a/UI/App.config
+++ b/UI/App.config
@@ -10,3 +10,5 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
     </startup>
 </configuration>
+
+// testing commit
